Modify test.ipynb with enhanced prompt engineering

--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "91653580",
    "metadata": {},
    "outputs": [
@@ -91,28 +91,51 @@
     "tag_mapping_dict = {\n",
     "    'Valid': 0,\n",
     "    'Advertisement': 1,\n",
-    "    'Irrelevant': 2  ,\n",
+    "    'Irrelevant': 2,\n",
     "    'Rant_Without_Visit': 3,\n",
     "}\n",
-    "\n",
     "df['label'] = df['predicted_label'].map(tag_mapping_dict)\n",
-    "df[df['label']==None]"
+    "\n",
+    "# REPLACE this:\n",
+    "# df[df['label']==None]\n",
+    "# WITH:\n",
+    "missing = df['label'].isna()\n",
+    "print(\"Unmapped labels:\", int(missing.sum()))\n",
+    "assert missing.sum() == 0, \"Found unmapped labels in predicted_label\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "cb8d5ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROMPT_PREFIX = (\n",
+    "    \"Task: You are an expert at detecting junk reviews.\\n\"\n",
+    "    \"Labels: Valid, Advertisement, Irrelevant, Rant_Without_Visit.\\n\"\n",
+    "    \"Decision order: Ad > Irrelevant > No-visit rant > Valid.\\n\"\n",
+    "    \"Review: \"\n",
+    ")\n",
+    "\n",
+    "def apply_prompt(s: str) -> str:\n",
+    "    return PROMPT_PREFIX + str(s).strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e098b4cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtered = df.loc[:,['text','label']]\n",
-    "# df_filtered=df_filtered.head(10)"
+    "df_filtered = df.loc[:, ['text', 'label']]\n",
+    "df_filtered['prompted_text'] = df_filtered['text'].apply(apply_prompt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b5c3ca09",
    "metadata": {},
    "outputs": [
@@ -132,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "23e31cd7",
    "metadata": {},
    "outputs": [
@@ -154,22 +177,25 @@
     }
    ],
    "source": [
-    "train_df, temp_df = train_test_split(df_filtered, test_size=0.1, random_state=42) \n",
+    "from datasets import Dataset, DatasetDict\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# val_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42) \n",
+    "train_df, val_df = train_test_split(\n",
+    "    df_filtered[['prompted_text','label']],\n",
+    "    test_size=0.1,\n",
+    "    random_state=42,\n",
+    "    stratify=df_filtered['label']\n",
+    ")\n",
     "\n",
-    "train_dataset = Dataset.from_pandas(train_df)\n",
-    "val_dataset = Dataset.from_pandas(temp_df)\n",
-    "# val_dataset = Dataset.from_pandas(val_df)\n",
-    "# test_dataset = Dataset.from_pandas(test_df)\n",
+    "train_dataset = Dataset.from_pandas(train_df.reset_index(drop=True))\n",
+    "val_dataset   = Dataset.from_pandas(val_df.reset_index(drop=True))\n",
     "\n",
     "my_dataset_dict = DatasetDict({\n",
     "    'train': train_dataset,\n",
-    "    'validation': val_dataset,\n",
-    "    # 'test': test_dataset\n",
-    "})\n",
-    "my_dataset_dict = my_dataset_dict.remove_columns('__index_level_0__')\n",
-    "print(my_dataset_dict)"
+    "    'validation': val_dataset\n",
+    "}).remove_columns([])  # nothing to drop now\n",
+    "\n",
+    "print(my_dataset_dict)\n"
    ]
   },
   {
@@ -186,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "927b6493",
    "metadata": {},
    "outputs": [
@@ -215,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6215ea66",
    "metadata": {},
    "outputs": [
@@ -234,18 +260,25 @@
     "checkpoint = \"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
     "\n",
-    "\n",
     "def tokenize_function(example):\n",
-    "    return tokenizer(example[\"text\"],truncation=True)\n",
-    "\n",
+    "    # works for both cases: with or without prompted_text\n",
+    "    text_col = \"prompted_text\" if \"prompted_text\" in example else \"text\"\n",
+    "    return tokenizer(example[text_col], truncation=True)\n",
     "\n",
     "tokenized_datasets = my_dataset_dict.map(tokenize_function, batched=True)\n",
-    "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)"
+    "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
+    "\n",
+    "# drop any raw columns that may exist (prompted_text OR text, and any index col)\n",
+    "cols_to_drop = [c for c in tokenized_datasets[\"train\"].column_names \n",
+    "                if c in [\"prompted_text\", \"text\", \"__index_level_0__\"]]\n",
+    "if cols_to_drop:\n",
+    "    tokenized_datasets = tokenized_datasets.remove_columns(cols_to_drop)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f1300ea3",
    "metadata": {},
    "outputs": [
@@ -299,21 +332,37 @@
    ],
    "source": [
     "from transformers import AutoModelForSequenceClassification, TrainingArguments, Trainer\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "import numpy as np\n",
     "\n",
     "# 1. 加载模型 (此时模型默认在CPU上)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=4)\n",
     "\n",
-    "# 2. 设置训练参数\n",
+    "# 简单评估指标（最小改动）\n",
+    "def compute_metrics(eval_pred):\n",
+    "    logits, labels = eval_pred\n",
+    "    preds = np.argmax(logits, axis=-1)\n",
+    "    return {\n",
+    "        \"accuracy\": accuracy_score(labels, preds),\n",
+    "        \"f1_weighted\": f1_score(labels, preds, average=\"weighted\", zero_division=0),\n",
+    "        \"f1_macro\": f1_score(labels, preds, average=\"macro\", zero_division=0),\n",
+    "    }\n",
     "\n",
+    "# 2. 设置训练参数\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=f\"./results/{checkpoint}\",          # 输出目录\n",
-    "    num_train_epochs=3,              # 训练轮次\n",
-    "    per_device_train_batch_size=16,  # 每个GPU的训练批量大小\n",
-    "    per_device_eval_batch_size=64,   # 每个GPU的评估批量大小\n",
-    "    warmup_steps=500,                # 预热步数\n",
-    "    weight_decay=0.01,               # 权重衰减\n",
-    "    logging_dir=\"./logs\",            # 日志目录\n",
-    "    fp16=True,                       # <--- 开启混合精度训练，大幅加速并减少显存占用 (推荐！)\n",
+    "    num_train_epochs=3,                            # 训练轮次\n",
+    "    per_device_train_batch_size=16,                # 每个GPU的训练批量大小\n",
+    "    per_device_eval_batch_size=64,                 # 每个GPU的评估批量大小\n",
+    "    warmup_ratio=0.1,                              # 预热比例（替代固定500步，更稳妥）\n",
+    "    weight_decay=0.01,                             # 权重衰减\n",
+    "    logging_dir=\"./logs\",                          # 日志目录\n",
+    "    fp16=True,                                     # <--- 开启混合精度训练，大幅加速并减少显存占用 (推荐！)\n",
+    "    evaluation_strategy=\"epoch\",                   # 每个epoch评估\n",
+    "    save_strategy=\"epoch\",                         # 每个epoch保存\n",
+    "    load_best_model_at_end=True,                   # 训练结束加载最优模型\n",
+    "    metric_for_best_model=\"f1_macro\",              # 以宏平均F1做最佳指标\n",
+    "    greater_is_better=True,\n",
     ")\n",
     "\n",
     "# 假设你已经准备好了 tokenized_datasets\n",
@@ -321,22 +370,23 @@
     "\n",
     "# 3. 初始化 Trainer\n",
     "trainer = Trainer(\n",
-    "    model=model,                         # 模型会被自动移动到GPU\n",
-    "    args=training_args,                  # 训练参数\n",
+    "    model=model,                                   # 模型会被自动移动到GPU\n",
+    "    args=training_args,                            # 训练参数\n",
     "    train_dataset=tokenized_datasets['train'],\n",
     "    eval_dataset=tokenized_datasets[\"validation\"],\n",
     "    data_collator=data_collator,\n",
-    "    processing_class=tokenizer,\n",
+    "    tokenizer=tokenizer,                           # （替换 processing_class）\n",
+    "    compute_metrics=compute_metrics,               # 增加评估指标\n",
     ")\n",
     "\n",
     "# 4. 开始训练\n",
     "#    在调用 .train() 时，每一批数据也会被自动发送到GPU\n",
-    "trainer.train()"
+    "trainer.train()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bd0fb57b",
    "metadata": {},
    "outputs": [
@@ -367,20 +417,27 @@
     }
    ],
    "source": [
-    "predictions = trainer.predict(tokenized_datasets[\"validation\"])\n",
-    "print(predictions.predictions.shape, predictions.label_ids.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "29a59778",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import numpy as np\n",
     "\n",
-    "preds = np.argmax(predictions.predictions, axis=-1)"
+    "id2label = {0: \"Valid\", 1: \"Advertisement\", 2: \"Irrelevant\", 3: \"Rant_Without_Visit\"}\n",
+    "all_labels = [0, 1, 2, 3]\n",
+    "target_names = [id2label[i] for i in all_labels]\n",
+    "\n",
+    "predictions = trainer.predict(tokenized_datasets[\"validation\"])\n",
+    "logits = predictions.predictions\n",
+    "labels = predictions.label_ids\n",
+    "preds = np.argmax(logits, axis=-1).astype(int)\n",
+    "\n",
+    "print(classification_report(\n",
+    "    labels, preds,\n",
+    "    labels=all_labels,              # <-- ensure fixed label set\n",
+    "    target_names=target_names,\n",
+    "    zero_division=0,\n",
+    "    digits=3\n",
+    "))\n",
+    "\n",
+    "print(\"Confusion matrix:\\n\", confusion_matrix(labels, preds, labels=all_labels))\n"
    ]
   }
  ],
