Implement pair-encoding

--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -107,30 +107,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8d5ed5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PROMPT_PREFIX = (\n",
-    "    \"Task: You are an expert at detecting junk reviews.\\n\"\n",
-    "    \"Labels: Valid, Advertisement, Irrelevant, Rant_Without_Visit.\\n\"\n",
-    "    \"Decision order: Ad > Irrelevant > No-visit rant > Valid.\\n\"\n",
-    "    \"Review: \"\n",
-    ")\n",
-    "\n",
-    "def apply_prompt(s: str) -> str:\n",
-    "    return PROMPT_PREFIX + str(s).strip()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e098b4cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtered = df.loc[:, ['text', 'label']]\n",
-    "df_filtered['prompted_text'] = df_filtered['text'].apply(apply_prompt)\n"
+    "df_filtered = df.loc[:, ['text', 'label']]"
    ]
   },
   {
@@ -181,7 +162,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "train_df, val_df = train_test_split(\n",
-    "    df_filtered[['prompted_text','label']],\n",
+    "    df_filtered[['text','label']],\n",
     "    test_size=0.1,\n",
     "    random_state=42,\n",
     "    stratify=df_filtered['label']\n",
@@ -260,10 +241,18 @@
     "checkpoint = \"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
     "\n",
+    "INSTRUCTION = (\n",
+    "    \"Task: classify review for THIS business. \"\n",
+    "    \"Labels: Valid, Advertisement, Irrelevant, Rant_Without_Visit. \"\n",
+    "    \"Priority: Ad > Irrelevant > No-visit rant > Valid.\"\n",
+    ")\n",
+    "\n",
     "def tokenize_function(example):\n",
-    "    # works for both cases: with or without prompted_text\n",
-    "    text_col = \"prompted_text\" if \"prompted_text\" in example else \"text\"\n",
-    "    return tokenizer(example[text_col], truncation=True)\n",
+    "    texts = example[\"text\"]\n",
+    "    # texts is a list when batched=True; replicate the instruction to match length\n",
+    "    instr = [INSTRUCTION] * len(texts)\n",
+    "    return tokenizer(instr, texts, truncation=True, max_length=256)\n",
+    "\n",
     "\n",
     "tokenized_datasets = my_dataset_dict.map(tokenize_function, batched=True)\n",
     "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
