--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bf39d732",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df=pd.read_csv('../data/label_data_with_cnd/merged_all.csv')"
+    "import random\n",
+    "seed=random.randint(0,100)\n",
+    "print(seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2e983481",
    "metadata": {},
    "outputs": [
@@ -28,12 +30,13 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df=pd.read_csv('../data/label_data_with_cnd/merged_all.csv')\n",
     "df = df.dropna(subset=[\"predicted_label\"])\n",
     "df = df[df[\"predicted_label\"].str.strip() != \"\"]\n",
     "df['predicted_label'].value_counts()"
@@ -42,6 +45,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca5be61d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted_label\n",
+      "Valid                 300\n",
+      "Irrelevant            280\n",
+      "Rant_Without_Visit     22\n",
+      "Advertisement          13\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separate the DataFrame into 'valid' and 'non-valid' rows.\n",
+    "df_valid = df[df['predicted_label'] == 'Valid']\n",
+    "df_other = df[df['predicted_label'] != 'Valid']\n",
+    "\n",
+    "# Randomly sample 300 rows from the 'valid' DataFrame.\n",
+    "df_valid_sampled = df_valid.sample(n=300, random_state=seed)\n",
+    "\n",
+    "# Concatenate the sampled 'valid' rows with the 'non-valid' rows.\n",
+    "df = pd.concat([df_valid_sampled, df_other])\n",
+    "\n",
+    "# Print the value counts of the updated DataFrame.\n",
+    "print(df['predicted_label'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "91653580",
    "metadata": {},
    "outputs": [
@@ -74,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e098b4cd",
    "metadata": {},
    "outputs": [],
@@ -84,10 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b5c3ca09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zhangguibin/anaconda3/envs/dra_ykm/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import Dataset, DatasetDict\n",
     "from sklearn.model_selection import train_test_split"
@@ -106,11 +152,11 @@
       "DatasetDict({\n",
       "    train: Dataset({\n",
       "        features: ['text', 'label'],\n",
-      "        num_rows: 901\n",
+      "        num_rows: 553\n",
       "    })\n",
       "    validation: Dataset({\n",
       "        features: ['text', 'label'],\n",
-      "        num_rows: 101\n",
+      "        num_rows: 62\n",
       "    })\n",
       "})\n"
      ]
@@ -123,7 +169,7 @@
     "train_df, val_df = train_test_split(\n",
     "    df_filtered[['text','label']],\n",
     "    test_size=0.1,\n",
-    "    random_state=42,\n",
+    "    random_state=seed,\n",
     "    stratify=df_filtered['label']\n",
     ")\n",
     "\n",
@@ -140,7 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "810bd6bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "0    30\n",
+       "2    28\n",
+       "3     2\n",
+       "1     2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "2c5b29bf",
    "metadata": {},
    "outputs": [],
@@ -152,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "927b6493",
    "metadata": {},
    "outputs": [
@@ -181,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6215ea66",
    "metadata": {},
    "outputs": [
@@ -189,8 +261,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 901/901 [00:00<00:00, 14422.16 examples/s]\n",
-      "Map: 100%|██████████| 101/101 [00:00<00:00, 8324.16 examples/s]\n"
+      "Map: 100%|██████████| 553/553 [00:00<00:00, 9611.39 examples/s]\n",
+      "Map: 100%|██████████| 62/62 [00:00<00:00, 4693.48 examples/s]\n"
      ]
     }
    ],
@@ -246,17 +318,45 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='57' max='57' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [57/57 00:09, Epoch 3/3]\n",
+       "      <progress value='36' max='36' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [36/36 00:11, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
+       "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1 Weighted</th>\n",
+       "      <th>F1 Macro</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.853379</td>\n",
+       "      <td>0.741935</td>\n",
+       "      <td>0.714959</td>\n",
+       "      <td>0.382623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.054700</td>\n",
+       "      <td>0.711156</td>\n",
+       "      <td>0.774194</td>\n",
+       "      <td>0.748394</td>\n",
+       "      <td>0.399889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.705300</td>\n",
+       "      <td>0.658297</td>\n",
+       "      <td>0.774194</td>\n",
+       "      <td>0.747149</td>\n",
+       "      <td>0.398990</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -268,12 +368,22 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zhangguibin/anaconda3/envs/dra_ykm/lib/python3.11/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn(\n",
+      "/home/zhangguibin/anaconda3/envs/dra_ykm/lib/python3.11/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=57, training_loss=1.0191426862750137, metrics={'train_runtime': 11.4883, 'train_samples_per_second': 235.282, 'train_steps_per_second': 4.962, 'total_flos': 247014841607352.0, 'train_loss': 1.0191426862750137, 'epoch': 3.0})"
+       "TrainOutput(global_step=36, training_loss=0.8478613363371955, metrics={'train_runtime': 11.738, 'train_samples_per_second': 141.336, 'train_steps_per_second': 3.067, 'total_flos': 160512959410752.0, 'train_loss': 0.8478613363371955, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +393,6 @@
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "import numpy as np\n",
     "\n",
-    "# 1. 加载模型 (此时模型默认在CPU上)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=4)\n",
     "\n",
     "# 简单评估指标（最小改动）\n",
@@ -298,18 +407,21 @@
     "\n",
     "# 2. 设置训练参数\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir=f\"./results/{checkpoint}\",          # 输出目录\n",
-    "    num_train_epochs=3,                            # 训练轮次\n",
-    "    per_device_train_batch_size=16,                # 每个GPU的训练批量大小\n",
-    "    per_device_eval_batch_size=64,                 # 每个GPU的评估批量大小\n",
-    "    warmup_ratio=0.1,                              # 预热比例（替代固定500步，更稳妥）\n",
-    "    weight_decay=0.01,                             # 权重衰减\n",
-    "    logging_dir=\"./logs\",                          # 日志目录\n",
-    "    fp16=True,                                     # <--- 开启混合精度训练，大幅加速并减少显存占用 (推荐！)\n",
-    "    evaluation_strategy=\"epoch\",                   # 每个epoch评估\n",
-    "    save_strategy=\"epoch\",                         # 每个epoch保存\n",
-    "    load_best_model_at_end=True,                   # 训练结束加载最优模型\n",
-    "    metric_for_best_model=\"f1_macro\",              # 以宏平均F1做最佳指标\n",
+    "    output_dir=f\"./results/{checkpoint}\",\n",
+    "    num_train_epochs=3,\n",
+    "    per_device_train_batch_size=16,\n",
+    "    per_device_eval_batch_size=64,\n",
+    "    warmup_ratio=0.1,\n",
+    "    weight_decay=0.01,\n",
+    "    logging_dir=\"./logs\",\n",
+    "    # Add these two lines to show training loss\n",
+    "    logging_strategy=\"steps\",\n",
+    "    logging_steps=1,  # Log every 50 steps, you can adjust this value\n",
+    "    fp16=True,\n",
+    "    eval_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model=\"f1_macro\",\n",
     "    greater_is_better=True,\n",
     ")\n",
     "\n",
@@ -323,7 +435,7 @@
     "    train_dataset=tokenized_datasets['train'],\n",
     "    eval_dataset=tokenized_datasets[\"validation\"],\n",
     "    data_collator=data_collator,\n",
-    "    tokenizer=tokenizer,                           # （替换 processing_class）\n",
+    "    processing_class=tokenizer,                           # （替换 processing_class）\n",
     "    compute_metrics=compute_metrics,               # 增加评估指标\n",
     ")\n",
     "\n",
@@ -334,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bd0fb57b",
    "metadata": {},
    "outputs": [
@@ -348,7 +460,15 @@
     },
     {
      "data": {
-      "text/html": [],
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='1' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1/1 : < :]\n",
+       "    </div>\n",
+       "    "
+      ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
@@ -360,7 +480,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(101, 4) (101,)\n"
+      "                    precision    recall  f1-score   support\n",
+      "\n",
+      "             Valid      0.765     0.867     0.812        30\n",
+      "     Advertisement      0.000     0.000     0.000         2\n",
+      "        Irrelevant      0.857     0.857     0.857        28\n",
+      "Rant_Without_Visit      0.000     0.000     0.000         2\n",
+      "\n",
+      "          accuracy                          0.806        62\n",
+      "         macro avg      0.405     0.431     0.417        62\n",
+      "      weighted avg      0.757     0.806     0.780        62\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[26  0  4  0]\n",
+      " [ 2  0  0  0]\n",
+      " [ 4  0 24  0]\n",
+      " [ 2  0  0  0]]\n"
      ]
     }
    ],
@@ -391,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "dra_ykm",
    "language": "python",
    "name": "python3"
   },
@@ -405,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
