--- a/data/glance_data.ipynb
+++ b/data/glance_data.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b3ec9b58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['business_name', 'text', 'predicted_label', 'prediction_reason', 'name',\n",
+       "       'description', 'category', 'index', 'rating', 'error'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv('reviews_with_places_1000.csv')\n"
+    "df=pd.read_csv('label_data_with_cnd/merged_all.csv')\n",
+    "df.columns\n"
    ]
   },
   {
@@ -19,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[]"
+    "df=pd.read_csv('data_enhancement/advertisements_500_final.csv')\n",
+    "df.columns"
    ]
   },
   {
@@ -40,7 +55,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "esft",
+   "display_name": "dra_ykm",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
