--- a/src/data_clean.ipynb
+++ b/src/data_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "494a4b4a",
    "metadata": {},
    "outputs": [],
@@ -123,11 +123,86 @@
     "print(\"description 缺失数量:\", df['description'].isnull().sum())\n",
     "print(\"description 非缺失数量:\", df['description'].notnull().sum())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8f2d529",
+   "metadata": {},
+   "source": [
+    "<h1>清理merge数据</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c614caeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working directory: /Users/yuanyusi/Desktop/ML-for-Trustworthy-Location-Reviews/src\n",
+      "Files in current directory: ['filter_invalid.py', 'merge.py', 'data_clean.py', 'data_clean.ipynb', 'prompt_labelling.ipynb', 'merge_all.ipynb', 'prompt_labelling.py']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(\"Current working directory:\", os.getcwd())\n",
+    "print(\"Files in current directory:\", os.listdir('.'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c58afb08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean merged data.\n",
+    "df = pd.read_csv(\"../data/out/merged_all.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0529eea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=['name', 'index', 'rating', 'error'])\n",
+    "df = df[df['predicted_label'] != \"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3d69c1ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/out/merged_all.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "myenv (3.13.1)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
