--- a/src/merge_all.ipynb
+++ b/src/merge_all.ipynb
@@ -57,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "myenv (3.13.1)",
    "language": "python",
    "name": "python3"
   },
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
