--- a/src/prompt_labelling.ipynb
+++ b/src/prompt_labelling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a2b23136",
    "metadata": {},
    "outputs": [],
@@ -124,19 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0a68a73f",
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
     "\n",
-    "df = pd.read_csv(\"../data/reviews_with_places_1000_Montana.csv\")\n",
+    "df = pd.read_csv(\"../data/out/reviews_with_places_1000_Oklahoma.csv\")\n",
     "\n",
     "results = []\n",
     "failed_rows = []\n",
     "client = OpenAI(\n",
-    "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+    "        api_key=\"\",\n",
     "        base_url=\"https://dashscope.aliyuncs.com/compatible-mode/v1\",\n",
     ")\n"
    ]
@@ -222,7 +222,156 @@
    "execution_count": null,
    "id": "5215554d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:   2%|▏         | 21/1000 [00:10<08:39,  1.88it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 28 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:   3%|▎         | 34/1000 [00:17<09:09,  1.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 36 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:   4%|▍         | 40/1000 [00:20<07:18,  2.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 20 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  11%|█         | 112/1000 [00:48<06:53,  2.15it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 111 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  20%|█▉        | 197/1000 [01:22<03:21,  3.98it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 199 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n",
+      "Row 201 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  26%|██▌       | 262/1000 [01:52<06:03,  2.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 267 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  32%|███▏      | 322/1000 [02:19<04:24,  2.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 324 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  37%|███▋      | 373/1000 [02:42<03:28,  3.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 376 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  38%|███▊      | 379/1000 [02:45<03:14,  3.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 358 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  41%|████▏     | 414/1000 [02:59<03:31,  2.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 399 attempt 1 failed: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing reviews:  53%|█████▎    | 533/1000 [03:50<05:05,  1.53it/s]"
+     ]
+    }
+   ],
    "source": [
     "results = []\n",
     "# Prepare tasks by creating a list of tuples, each containing an index and a row\n",
@@ -254,16 +403,13 @@
    "outputs": [],
    "source": [
     "# Save the results to a CSV file\n",
-    "results_df.to_csv(\"../data/label_data_with_cnd/reviews_with_meta_Montana_with_cnd.csv\", index=False)\n",
-    "\n",
-    "df = pd.read_csv(\"../data/label_data_with_cnd/reviews_with_meta_Montana_with_cnd.csv\")\n",
-    "print(\"总共有\", len(df), \"条记录\")\n"
+    "results_df.to_csv(\"../data/out/label_reviews_Oklahoma.csv\", index=False)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "myenv (3.13.1)",
    "language": "python",
    "name": "python3"
   },
@@ -277,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
