modify context input

--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -270,7 +270,7 @@
     "    json_object = {\n",
     "        \"business_name\": row[\"business_name\"],\n",
     "        \"business_description\": row[\"description\"],\n",
-    "        \"reviewed_category\": row[\"category\"],\n",
+    "        \"business_category\": row[\"category\"],\n",
     "        \"review_text\": row[\"text\"],\n",
     "        # \"review_length\": len(row[\"text\"]),\n",
     "    }\n",
