--- a/test_colab_final.ipynb
+++ b/test_colab_final.ipynb
@@ -16,7 +16,7 @@
         "# --- Colab bootstrap for your repo (GPU + deps + data) ---\n",
         "\n",
         "REPO_URL = \"https://github.com/yyssophie/ML-for-Trustworthy-Location-Reviews.git\"\n",
-        "BRANCH = \"zhx\"\n",
+        "BRANCH = \"main\"\n",
         "REPO_DIR = \"/content/ML-for-Trustworthy-Location-Reviews\"\n",
         "REQUIREMENTS = \"requirements.txt\"  # keep None to skip\n",
         "DATA_REL_PATH = \"data/out\"  # adjust if needed\n",
@@ -1908,167 +1908,6 @@
           "execution_count": 19
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Save the TEST dataset ('text', 'label') to CSV\n",
-        "export_path = \"data/out/test_set_text_label.csv\"\n",
-        "test_df[['text', 'label']].to_csv(export_path, index=False)\n",
-        "print(f\"Saved test set to: {export_path}  | Rows: {len(test_df)}\")\n"
-      ],
-      "metadata": {
-        "id": "8P6L6I59g8Y2"
-      },
-      "id": "8P6L6I59g8Y2",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# --- Evaluate a specific checkpoint (e.g. checkpoint-3339) ---\n",
-        "\n",
-        "import os\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from transformers import AutoModelForSequenceClassification, Trainer\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "\n",
-        "# 1. Point to your checkpoint folder (adjust path if needed)\n",
-        "checkpoint_dir = os.path.join(os.getcwd(), \"/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-3339\")\n",
-        "\n",
-        "# 2. Sanity check: does the folder exist and have model files?\n",
-        "print(\"Checkpoint contents:\", os.listdir(checkpoint_dir))\n",
-        "\n",
-        "# 3. Reload the model from this checkpoint (local only)\n",
-        "model_ckpt = AutoModelForSequenceClassification.from_pretrained(\n",
-        "    checkpoint_dir,\n",
-        "    local_files_only=True\n",
-        ")\n",
-        "\n",
-        "# 4. Re-init a Trainer with this model\n",
-        "trainer_ckpt = Trainer(\n",
-        "    model=model_ckpt,\n",
-        "    args=training_args,   # reuse your existing training_args\n",
-        "    eval_dataset=tokenized_datasets[\"validation\"],\n",
-        "    tokenizer=tokenizer,\n",
-        "    data_collator=data_collator,\n",
-        "    compute_metrics=compute_metrics,\n",
-        ")\n",
-        "\n",
-        "# 5. Run prediction\n",
-        "predictions = trainer_ckpt.predict(tokenized_datasets[\"validation\"])\n",
-        "logits = predictions.predictions\n",
-        "labels = predictions.label_ids\n",
-        "preds = np.argmax(logits, axis=-1).astype(int)\n",
-        "\n",
-        "# 6. Define label mapping\n",
-        "id2label = {0: \"Valid\", 1: \"Advertisement\", 2: \"Irrelevant\", 3: \"Rant_Without_Visit\"}\n",
-        "all_labels = [0, 1, 2, 3]\n",
-        "target_names = [id2label[i] for i in all_labels]\n",
-        "\n",
-        "# 7. Print classification report + confusion matrix\n",
-        "print(classification_report(\n",
-        "    labels, preds,\n",
-        "    labels=all_labels,\n",
-        "    target_names=target_names,\n",
-        "    zero_division=0,\n",
-        "    digits=3\n",
-        "))\n",
-        "\n",
-        "print(\"Confusion matrix:\\n\", confusion_matrix(labels, preds, labels=all_labels))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 376
-        },
-        "id": "ht1cCY2OXoEZ",
-        "outputId": "7c360f4d-b92c-4cd2-9167-37d4290e7a43"
-      },
-      "id": "ht1cCY2OXoEZ",
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Checkpoint contents: ['vocab.txt', 'rng_state.pth', 'special_tokens_map.json', 'trainer_state.json', 'tokenizer_config.json', 'tokenizer.json', 'scheduler.pt', 'scaler.pt', 'optimizer.pt', 'model.safetensors', 'training_args.bin', 'config.json']\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1178625789.py:22: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
-            "  trainer_ckpt = Trainer(\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": []
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "                    precision    recall  f1-score   support\n",
-            "\n",
-            "             Valid      0.974     0.991     0.983       768\n",
-            "     Advertisement      1.000     0.941     0.970        17\n",
-            "        Irrelevant      0.800     0.667     0.727        48\n",
-            "Rant_Without_Visit      1.000     0.714     0.833        14\n",
-            "\n",
-            "          accuracy                          0.967       847\n",
-            "         macro avg      0.944     0.828     0.878       847\n",
-            "      weighted avg      0.965     0.967     0.965       847\n",
-            "\n",
-            "Confusion matrix:\n",
-            " [[761   0   7   0]\n",
-            " [  1  16   0   0]\n",
-            " [ 16   0  32   0]\n",
-            " [  3   0   1  10]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!find /content -type d -name \"checkpoint-*\"\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "87LDw91MZcKq",
-        "outputId": "1d19d06d-30d5-4f83-9d13-fb16bbc3e766"
-      },
-      "id": "87LDw91MZcKq",
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-2385\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-1431\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-954\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-2862\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-477\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-3816\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-3339\n",
-            "/content/ML-for-Trustworthy-Location-Reviews/results/nlptown/bert-base-multilingual-uncased-sentiment-952pm/checkpoint-1908\n"
-          ]
-        }
-      ]
     }
   ],
   "metadata": {
@@ -2090,10 +1929,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "fd299793bb1b4b83b434ac9615e21eca": {
