--- a/data/glance_data.ipynb
+++ b/data/glance_data.ipynb
@@ -28,10 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8c503cd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['business_name', 'text', 'predicted_label', 'prediction_reason'], dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df=pd.read_csv('data_enhancement/advertisements_500_final.csv')\n",
     "df.columns"
